gl33-master/src/test/deca/context/valid/others/operations_sur_int.deca
// Valid test
// Opérations sur les int

{
    int x = 1;
    int y = 1;
    int z = 1;

    x = y + z;
    x = y - z;
    x = y * z;
    x = y / z;

    y = x + z;
    y = x - z;
    y = x * z;
    y = x / z;

    z = x + y;
    z = x - y;
    z = x * y;
    z = x / y;
}
