gl33-master/src/test/deca/context/invalid/other/operations_int_float_moins.deca
// Invalid test
// Opération sur les int et les flottant ensemble

{
    int a, b;
    float x;

    a = b - x;
}
